@@ -32,6 +32,7 @@ layout <-
 	if (is.character(v)) {
 	    wcm <- v[cm.v]
 	    v[cm.v] <- substring(wcm, 1, nchar(wcm, type="c") - 3)
+            v <- chartr(getOption("OutDec"), ".", v)
 	}
 	as.numeric(v)
     }
