@@ -34,6 +34,11 @@ BUG FIXES
 
     o	qt(p, df=1) is now also correct for very small p. (PR#9804)
 
+    o	Several functions including those making use of printCoefmat(),
+	layout() and sortedXyData() now work correctly with
+	non-default settings of options("OutDec").
+
+
 
 		CHANGES IN R VERSION 2.5.1
 
